add-config-params

--- a/example/output/iconfont.css
+++ b/example/output/iconfont.css
@@ -1,10 +1,10 @@
 @font-face { 
-font-family: "iconfont";src: url("./fonts/iconfont.eot");
-src: url("./fonts/iconfont.eot?#iefix") format("embedded-opentype"),
-url("./fonts/iconfont.woff") format("woff"),
-url("./fonts/iconfont.ttf") format("truetype"),
-url("./fonts/iconfont.svg#iconfont") format("svg");}
-.icon-font{font-family:"iconfont";font-size:40px;font-style:normal;}
-.i-iconfont-guanbi:after{content: "\ffff";}
-.i-iconfont-player-play:after{content: "\fffe";}
-.i-iconfont-ren:after{content: "\fffd";}
+font-family: "bat-iconfont";src: url("./fonts/bat-iconfont.eot");
+src: url("./fonts/bat-iconfont.eot?#iefix") format("embedded-opentype"),
+url("./fonts/bat-iconfont.woff") format("woff"),
+url("./fonts/bat-iconfont.ttf") format("truetype"),
+url("./fonts/bat-iconfont.svg#bat-iconfont") format("svg");}
+.bat-iconfont{font-family:"bat-iconfont";font-size:14px;font-style:normal;}
+.i-iconfont-ren:before{content: "\ffff";}
+.i-iconfont-player-play:before{content: "\fffe";}
+.i-iconfont-guanbi:before{content: "\fffd";}
